--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Proyecto de Git</title>
+        <link href = "css/estilos.css" rel ="stylesheet" type ="text/css" />
     </head>
         <body>
-            
+            <h1>HOJA DE ESTILOS</h1>
+            <p>Vamas a introducir un enlace al archivo css</p>
         </body>
 </html>
