Nueva actualización de index 15-11-24

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
         <body>
             <h1>HOJA DE ESTILOS</h1>
             <p>Vamas a introducir un enlace al archivo css</p>
+            <p> GitHUb es una plataforma en línea que nos permite almacenar, compartir y colaborar en proyectos de software</p>
+            <p>Es un repositorio donde los programadores podemos guardar el código, hacer camnios y mantener un historial</p>
         </body>
 </html>
